# recipe-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 565b9b4d8f76_init.py  85b3c9fdad54_init.py  86c491d2f6e3_add_ingredient_recipe_ingredient_recipe.py  acde7cf2fb0c_revision.py  b138695408ee_fixed_relationship_cols.py  b1898cf1a65e_fixed_relationship_cols.py  c658617c3ab4_first_migration.py  cc4b883f3909_change_recipe_model_add_user.py  d3fde5a523a0_init.py  e0a282da869b_init.py
recipe_app/: base_recipes.py  deps.py  main.py  schema.py
recipe_app/crud/: __init__.py  base.py  crud_ingredient.py  crud_recipe.py  crud_recipe_ingredient.py  crud_user.py
recipe_app/db/: base.py  base_class.py  session.py
recipe_app/models/: __init__.py  base.py  index.py  ingredient.py  models.py  pantry.py  recipe.py  recipe_ingredient.py  user.py
recipe_app/schemas/: __init__.py  ingredient.py  pantry.py  recipe.py  recipe_ingredient.py  user.py
recipe_app/templates/: index.html
